PRESIDECMS-1776 limit max-width of asset preview to 100%, to avoid overlapping

--- a/system/assets/css/admin/specific/assetmanager/index/listingTable.less
+++ b/system/assets/css/admin/specific/assetmanager/index/listingTable.less
@@ -26,7 +26,7 @@
 						display : inline-block;
 
 						img {
-							max-width  : 48px;
+							max-width  : 100%;
 							max-height : 32px;
 						}
 					}
